--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Catering app</title>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  </head>
+  <script type="module" src="src/index"></script></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
